--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.7.1",
     "katex": "^0.16.25",
     "lodash": "^4.17.21",
+    "mathjs": "^15.1.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
