--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@lezer/highlight": "^1.2.3",
+    "@uiw/react-codemirror": "^4.25.4",
     "bootstrap": "^5.3.8",
     "calculate-size": "^1.1.1",
     "cheerio-standalone": "^0.22.0",
@@ -33,6 +35,8 @@
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-draggable": "^4.5.0",
+    "react-katex": "^3.1.0",
     "react-router-dom": "^7.10.1",
     "svg.js": "^2.7.1",
     "tex-to-svg": "^0.2.0",
