--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^19.2.0",
     "react-draggable": "^4.5.0",
     "react-katex": "^3.1.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.10.1",
     "svg.js": "^2.7.1",
     "tex-to-svg": "^0.2.0",
